--- a/server/views/partials/socket_client.hbs
+++ b/server/views/partials/socket_client.hbs
@@ -1,6 +1,4 @@
 <script src="/scripts/socket.io-client/dist/socket.io.js"></script>
 <script>
-    var socket = io({
-        path: '/SmartTrash'
-    });
+    var socket = io('/real-time-data');
 </script>
