Export real-time-data socket namespace

--- a/server/views/partials/socket_client.hbs
+++ b/server/views/partials/socket_client.hbs
@@ -1,4 +1,7 @@
 <script src="/scripts/socket.io-client/dist/socket.io.js"></script>
 <script>
     var socket = io('/real-time-data');
+    socket.on('data', data => {
+        $('.my-data').text(data);
+    });
 </script>
