--- a/server/views/real-time.hbs
+++ b/server/views/real-time.hbs
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <h2>Smart Trash Bin <span class="badge badge-light">Real-Time</span></h2>
+    <div class="container">
+        <h2>Smart Trash Bin <span class="badge badge-warning">Real-Time</span></h2>
+        <p class="my-data"></p>
+    </div>
     {{!-- JS Files --}}
     {{> socket_client}}
     {{> base_js}}
