--- a/server/views/real-time.hbs
+++ b/server/views/real-time.hbs
@@ -34,13 +34,22 @@
         </table>
         
         <div class="row">
-            <div class="col-sm-4 offset-md-4">
+            <div class="col-sm-4">
                 <div class="card">
                     <div class="card-header">
                         Waste Height
                     </div>
                     <div class="card-body">
-                        <canvas id="myChart" width="400" height="400"></canvas>
+                        <div class="row">
+                            <div class="col-sm">
+                                <canvas id="myChart2" width="400" height="400"></canvas>
+                                <p class="text-center">57%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-group list-group-flush">
+                        <li class="list-group-item">Temperature</li>
+                        <li class="list-group-item">Humidity</li>
                     </div>
                     <div class="card-footer text-muted">
                         Last updated 3 mins ago
