--- a/server/views/partials/socket_client.hbs
+++ b/server/views/partials/socket_client.hbs
@@ -2,9 +2,10 @@
 <script>
     var socket = io('/real-time-data');
     socket.on('real-time-data', data => {
-        $('.wasteHeight').text(Number(data.wastePercent).toFixed(2) + ' %');
-        $('.temperature').text(Number(data.temperature).toFixed(2) + ' *C');
-        $('.humidity').text(Number(data.humidity).toFixed(2) + ' %');
-        $('.tiltPos').text(Number(data.tiltPos));
+        wasteChart.data.datasets[0].data = [data.wastePercent];
+        wasteChart.update();
+        $('.wastePercentText').text(data.wastePercent);
+        humidChart.data.datasets[0].data = [data.humidity, (100 - data.humidity)];
+        humidChart.update();
     });
 </script>
