--- a/server/views/real-time.hbs
+++ b/server/views/real-time.hbs
@@ -1,55 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>STB — Real-Time Data</title>
     {{!-- CSS Files --}}
     {{> base_css}}
+    <title>STB — Real-Time Data</title>
 </head>
 
 <body>
     <div class="container">
-        <h2>Smart Trash Bin <span class="badge badge-warning">Real-Time</span></h2>
-        <table class="table table-striped">
-            <tbody>
-                <tr>
-                    <th>Waste Height</th>
-                    <td class="wasteHeight">N/A</td>
-                </tr>
-                <tr>
-                    <th>Temperature</th>
-                    <td class="temperature">N/A</td>
-                </tr>
-                <tr>
-                    <th>Humidity</th>
-                    <td class="humidity">N/A</td>
-                </tr>
-                <tr>
-                    <th>Tilt</th>
-                    <td class="tiltPos">N/A</td>
-                </tr>
-            </tbody>
-        </table>
-        
+        <div class="jumbotron mt-3">
+            <h2 class="display-5">Smart Trash Bin <span class="badge badge-warning">Real-Time</span></h2>
+        </div>
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-6 offset-sm-3">
                 <div class="card">
                     <div class="card-header">
                         Waste Height
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm">
-                                <canvas id="myChart2" width="400" height="400"></canvas>
-                                <p class="text-center">57%</p>
+                            <div class="col-sm-7">
+                                <canvas id="wasteChart" width="400" height="400"></canvas>
+                                <p class="text-center mb-0"><strong class="wastePercentText">57%</strong></p>
+                            </div>
+                            <div class="col-sm-5">
+                                <canvas id="humidChart" width="100" height="100"></canvas>
                             </div>
                         </div>
                     </div>
                     <div class="list-group list-group-flush">
                         <li class="list-group-item">Temperature</li>
-                        <li class="list-group-item">Humidity</li>
                     </div>
                     <div class="card-footer text-muted">
                         Last updated 3 mins ago
@@ -59,9 +39,9 @@
         </div>
     </div>
     {{!-- JS Files --}}
-    {{> socket_client}}
     {{> base_js}}
     {{> chart_js}}
+    {{> socket_client}}
 </body>
 
 </html>
