--- a/server/views/real-time.hbs
+++ b/server/views/real-time.hbs
@@ -21,10 +21,11 @@
                         <div class="row">
                             <div class="col-sm-7">
                                 <canvas id="wasteChart" width="400" height="400"></canvas>
-                                <p class="text-center mb-0"><strong class="wastePercentText">57%</strong></p>
+                                <p class="text-center mb-0"><strong class="wastePercentText">00.00%</strong></p>
                             </div>
                             <div class="col-sm-5">
                                 <canvas id="humidChart" width="100" height="100"></canvas>
+                                <p class="text-center mb-0"><strong class="humidPercentText">00.00%</strong></p>                                
                             </div>
                         </div>
                     </div>
