Integrate light-bootstrap-dashboard

--- a/server/views/partials/chart_js.hbs
+++ b/server/views/partials/chart_js.hbs
@@ -1,2 +1,2 @@
 <script src="/scripts/chart.js/dist/Chart.min.js"></script>
-<script src="/js/real-time.js"></script>
+<script src="/dashboard/js/real-time.js"></script>
