--- a/server/views/partials/base_js.hbs
+++ b/server/views/partials/base_js.hbs
@@ -1,3 +1,4 @@
 <script src="/scripts/jquery/dist/jquery.slim.min.js"></script>
 <script src="/scripts/popper.js/dist/popper.min.js"></script>
 <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/dashboard/js/light-bootstrap-dashboard.js"></script>
