--- a/server/views/real-time.hbs
+++ b/server/views/real-time.hbs
@@ -30,7 +30,16 @@
                         </div>
                     </div>
                     <div class="list-group list-group-flush">
-                        <li class="list-group-item">Temperature</li>
+                        <li class="list-group-item">
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    <strong>Temperature</strong>
+                                </div>
+                                <div>
+                                    <strong class="temperature">00.00C</strong>
+                                </div>
+                            </div>
+                        </li>
                     </div>
                     <div class="card-footer text-muted">
                         Last updated 3 mins ago
