Add list status and update module name

--- a/server/views/partials/base_js.hbs
+++ b/server/views/partials/base_js.hbs
@@ -2,3 +2,4 @@
 <script src="/scripts/popper.js/dist/popper.min.js"></script>
 <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/dashboard/js/light-bootstrap-dashboard.js"></script>
+<script src="/scripts/chart.js/dist/Chart.min.js"></script>
