--- a/server/views/real-time.hbs
+++ b/server/views/real-time.hbs
@@ -15,7 +15,7 @@
             <div class="col-sm-6 offset-sm-3">
                 <div class="card">
                     <div class="card-header">
-                        Waste Height
+                        Trash ID #1
                     </div>
                     <div class="card-body">
                         <div class="row">
