Add bootstrap-table dependency

--- a/server/views/partials/base_css.hbs
+++ b/server/views/partials/base_css.hbs
@@ -2,3 +2,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/dashboard/css/light-bootstrap-dashboard.css">
+<link rel="stylesheet" href="/scripts/Font-Awesome/web-fonts-with-css/css/fontawesome.css">
+<link rel="stylesheet" href="/scripts/Font-Awesome/web-fonts-with-css/css/fa-regular.min.css">
