--- a/server/views/real-time-sensor.hbs
+++ b/server/views/real-time-sensor.hbs
@@ -15,7 +15,7 @@
             <div class="col-sm-6 offset-sm-3">
                 <div class="card">
                     <div class="card-header">
-                        Trash ID #1
+                        <i class="far fa-trash-alt"></i> Trash ID #1
                     </div>
                     <div class="card-body">
                         <div class="row">
@@ -33,7 +33,7 @@
                         <li class="list-group-item">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <strong>Temperature</strong>
+                                    <strong ><i class="far fa-sun"></i> Temperature</strong>
                                 </div>
                                 <div>
                                     <strong class="temperature">00.00C</strong>
@@ -43,7 +43,7 @@
                         <li class="list-group-item">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <strong>Lid Status</strong>
+                                    <strong><i class="far fa-dot-circle"></i> Lid Status</strong>
                                 </div>
                                 <div>
                                     <strong class="tiltPos badge badge-danger">Closed</strong>
@@ -52,7 +52,7 @@
                         </li>
                     </div>
                     <div class="card-footer text-muted">
-                        Updates every 2 seconds.
+                        <i class="far fa-clock"></i> Updates every 2 seconds.
                     </div>      
                 </div>
             </div>
