Refactor express routes

--- a/server/views/partials/base_css.hbs
+++ b/server/views/partials/base_css.hbs
@@ -4,3 +4,8 @@
 <link rel="stylesheet" href="/dashboard/css/light-bootstrap-dashboard.css">
 <link rel="stylesheet" href="/scripts/Font-Awesome/web-fonts-with-css/css/fontawesome.css">
 <link rel="stylesheet" href="/scripts/Font-Awesome/web-fonts-with-css/css/fa-regular.min.css">
+<style>
+    .jumbotron.bg-primary {
+        background: linear-gradient(to bottom, #1F77D0 0%, #3c5be1 100%) !important;
+    }
+</style>
