--- a/server/views/partials/base_css.hbs
+++ b/server/views/partials/base_css.hbs
@@ -8,4 +8,7 @@
     .jumbotron.bg-primary {
         background: linear-gradient(to bottom, #1F77D0 0%, #3c5be1 100%) !important;
     }
+    .jumbotron.bg-dark {
+        background: linear-gradient(to bottom, rgba(66,66,66 ,1) 0%,rgba(33,33,33 ,1) 100%);
+    }
 </style>
