--- a/server/views/real_time_activity.hbs
+++ b/server/views/real_time_activity.hbs
@@ -9,90 +9,9 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="blue">
-            <div class="sidebar-wrapper">
-                <div class="logo">
-                    <a href="#" class="simple-text">
-                        Bintot
-                    </a>
-                </div>
-                <ul class="nav">
-                    {{!-- Trash --}}
-                    <li class="nav-link mb-0">
-                        <p class="lead text-center mb-0">Trash Bins</p>
-                    </li>
-
-                    <li>
-                        <a class="nav-link" href="/SmartTrash/bin-list">
-                            <i class="far fa-trash-alt"></i>
-                            <p>Bin List</p>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="nav-link" href="/SmartTrash/real-time-sensor">
-                            <i class="far fa-clock"></i>
-                            <p>Real-Time Data</p>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="nav-link" href="realtime_data.html">
-                            <i class="far fa-hourglass"></i>
-                            <p>Weekly Data</p>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="nav-link" href="realtime_data.html">
-                            <i class="far fa-calendar-alt"></i>
-                            <p>Monthly Data</p>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="nav-link" href="realtime_data.html">
-                            <i class="far fa-calendar"></i>
-                            <p>Yearly Data</p>
-                        </a>
-                    </li>
-
-                    {{!-- Employee --}}
-                    <li class="nav-link mb-0">
-                        <p class="lead text-center mb-0">Employee</p>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="employee_data.html">
-                            <i class="far fa-id-card"></i>
-                            <p>Employee List</p>
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="employee_data.html">
-                            <i class="far fa-clock"></i>
-                            <p>Real-Time Activity</p>
-                        </a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
+        {{> dash_sidebar}}
         <div class="main-panel">
-            <nav class="navbar navbar-expand-lg">
-                <div class=" container-fluid  ">
-                    <a class="navbar-brand" href="#pablo">Employee Activity [Real-Time]</a>
-                    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-bar burger-lines"></span>
-                        <span class="navbar-toggler-bar burger-lines"></span>
-                        <span class="navbar-toggler-bar burger-lines"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navigation">
-                        <ul class="nav navbar-nav mr-auto">
-                            
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            {{> dash_navbar}}
             <div class="content">
                 <div class="container">
                     <div class="jumbotron text-center bg-primary">
