--- a/server/views/real_time_sensor.hbs
+++ b/server/views/real_time_sensor.hbs
@@ -7,53 +7,65 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="jumbotron mt-3">
-            <h2 class="display-5">Smart Trash Bin <span class="badge badge-warning">Real-Time</span></h2>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 offset-sm-3">
-                <div class="card">
-                    <div class="card-header">
-                        <i class="far fa-trash-alt"></i> Trash ID #1
+    <div class="wrapper">
+        {{> dash_sidebar}}
+        <div class="main-panel">
+            {{> dash_navbar}}
+            <div class="content">
+                <div class="container">
+                    <div class="jumbotron bg-primary mt-3">
+                        <h2 class="display-5 text-center">
+                            <strong class="text-white mb-3">{{title}}</strong> 
+                            <br>
+                            <span class="badge badge-warning">Real-Time</span>
+                        </h2>
                     </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-7">
-                                <canvas id="wasteChart" width="400" height="400"></canvas>
-                                <p class="text-center mb-0"><strong class="wastePercentText">00.00%</strong></p>
-                            </div>
-                            <div class="col-sm-5">
-                                <canvas id="humidChart" width="100" height="100"></canvas>
-                                <p class="text-center mb-0"><strong class="humidPercentText">00.00%</strong></p>                                
+                    <div class="row">
+                        <div class="col-sm-6 offset-sm-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    <i class="far fa-trash-alt"></i> Trash ID #1
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <canvas id="wasteChart" width="400" height="400"></canvas>
+                                            <p class="text-center mb-0"><strong class="wastePercentText">00.00%</strong></p>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <canvas id="humidChart" width="100" height="100"></canvas>
+                                            <p class="text-center mb-0"><strong class="humidPercentText">00.00%</strong></p>                                
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <strong ><i class="far fa-sun"></i> Temperature</strong>
+                                            </div>
+                                            <div>
+                                                <strong class="temperature">00.00C</strong>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <strong><i class="far fa-dot-circle"></i> Lid Status</strong>
+                                            </div>
+                                            <div>
+                                                <strong class="tiltPos badge badge-danger">Closed</strong>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <i class="far fa-clock"></i> Updates every 2 seconds.
+                                </div>      
                             </div>
                         </div>
                     </div>
-                    <div class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <strong ><i class="far fa-sun"></i> Temperature</strong>
-                                </div>
-                                <div>
-                                    <strong class="temperature">00.00C</strong>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <strong><i class="far fa-dot-circle"></i> Lid Status</strong>
-                                </div>
-                                <div>
-                                    <strong class="tiltPos badge badge-danger">Closed</strong>
-                                </div>
-                            </div>
-                        </li>
-                    </div>
-                    <div class="card-footer text-muted">
-                        <i class="far fa-clock"></i> Updates every 2 seconds.
-                    </div>      
                 </div>
             </div>
         </div>
