Add db insert function

--- a/server/views/partials/dash_sidebar.hbs
+++ b/server/views/partials/dash_sidebar.hbs
@@ -47,7 +47,7 @@
             </li>
 
             {{!-- Employee --}}
-            <li class="nav-link mb-0">
+            <li class="nav-link mb-0 mt-4">
                 <p class="lead text-center mb-0">Employee</p>
             </li>
             <li class="nav-item">
@@ -60,6 +60,27 @@
                 <a class="nav-link" href="/smart-trash/emp/real-time">
                     <i class="far fa-clock"></i>
                     <p>Real-Time Activity</p>
+                </a>
+            </li>
+
+            <li>
+                <a class="nav-link" href="/smart-trash/emp/weekly">
+                    <i class="far fa-hourglass"></i>
+                    <p>Weekly Data</p>
+                </a>
+            </li>
+
+            <li>
+                <a class="nav-link" href="/smart-trash/emp/monthly">
+                    <i class="far fa-calendar-alt"></i>
+                    <p>Monthly Data</p>
+                </a>
+            </li>
+
+            <li>
+                <a class="nav-link" href="/smart-trash/emp/yearly">
+                    <i class="far fa-calendar"></i>
+                    <p>Yearly Data</p>
                 </a>
             </li>
 
